<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.7</version>
		<relativePath/>
	</parent>

	<groupId>com.jcondotta</groupId>
	<artifactId>bank-transfer-system</artifactId>
	<version>1.0.0</version>
	<name>bank-transfer-system</name>

	<modules>
		<module>bank-transfer-domain</module>
		<module>bank-transfer-processing-service</module>
		<module>bank-transfer-request-service</module>
		<module>bank-transfer-application</module>
		<module>bank-transfer-test-support</module>
	</modules>

	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<kinesis.version>2.32.4</kinesis.version>
		<lombok.version>1.18.38</lombok.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<postgresql.version>42.7.5</postgresql.version>
		<jackson-datatype-jsr310.version>2.15.2</jackson-datatype-jsr310.version>
		<spring-cloud-dependencies.version>2024.0.1</spring-cloud-dependencies.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.8.9</springdoc-openapi-starter-webmvc-ui.version>
		<micrometer-registry-prometheus.version>1.15.2</micrometer-registry-prometheus.version>

		<instancio-junit.version>5.4.0</instancio-junit.version>
		<commons-validator.version>1.7</commons-validator.version>

		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.jcondotta</groupId>
				<artifactId>bank-transfer-domain</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jcondotta</groupId>
				<artifactId>bank-transfer-application</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>kinesis</artifactId>
				<version>${kinesis.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson-datatype-jsr310.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-validator</groupId>
				<artifactId>commons-validator</artifactId>
				<version>${commons-validator.version}</version>
			</dependency>

			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-registry-prometheus</artifactId>
				<version>${micrometer-registry-prometheus.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>com.jcondotta</groupId>
				<artifactId>bank-transfer-test-support</artifactId>
				<version>${project.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.instancio</groupId>
				<artifactId>instancio-junit</artifactId>
				<version>${instancio-junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>
							--add-opens java.base/java.lang=ALL-UNNAMED
							-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
						</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<annotationProcessorPaths>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
